force-app/main/default/objects/BOT_Product_Formulary_JO__c/BOT_Product_Formulary_JO__c.object-meta.xml
<CustomObject>
    <description>(BOT) It is a junction object between plan product and formulary objects. It is having Master-Detail relationship with Plan product and Plan formulary objects.</description>
    <label>Plan-Product Formulary</label>
    <nameField>
        <displayFormat>PF-{0000}</displayFormat>
        <label>S No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plan-Product Formulary</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>