force-app/main/default/objects/BOT_Product_Formulary_JO__c/fields/BOT_Account__c.field-meta.xml
<CustomField>
    <fullName>BOT_Account__c</fullName>
    <description>Getting account name from Plan product object</description>
    <formula>HYPERLINK( BOT_Plan_Product__r.BOT_Account__r.Id  ,  BOT_Plan_Product__r.BOT_Account__r.Name )</formula>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>