force-app/main/default/objects/BOT_Product_Formulary_JO__c/fields/BOT_Benefit_Design__c.field-meta.xml
<CustomField>
    <fullName>BOT_Benefit_Design__c</fullName>
    <description>Master-Detail relationship to Benefit Design Object.</description>
    <label>Benefit Design</label>
    <referenceTo>Benefit_Design_vod__c</referenceTo>
    <relationshipName>Benefit_Design</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>