force-app/main/default/objects/BOT_Product_Formulary_JO__c/fields/BOT_Channel__c.field-meta.xml
<CustomField>
    <fullName>BOT_Channel__c</fullName>
    <description>Getting channel form the Plan product object</description>
    <formula>TEXT(BOT_Plan_Product__r.BOT_Channel__c)</formula>
    <label>Channel</label>
    <type>Text</type>
</CustomField>