force-app/main/default/objects/BOT_Product_Formulary_JO__c/fields/BOT_Plan_Product__c.field-meta.xml
<CustomField>
    <fullName>BOT_Plan_Product__c</fullName>
    <description>Master-Detail relationship to Plan product object</description>
    <label>Plan Product</label>
    <referenceTo>BOT_Plan_Product__c</referenceTo>
    <relationshipLabel>Plan Formulary</relationshipLabel>
    <relationshipName>Plan_Product</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>