force-app/main/default/objects/BOT_Product_Formulary_JO__c/fields/BOT_Plan_Product_ID__c.field-meta.xml
<CustomField>
    <fullName>BOT_Plan_Product_ID__c</fullName>
    <description>It is used to store the plan product ID. It is used for BOT internal reference only.</description>
    <label>Plan Product ID</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>