force-app/main/default/objects/BOT_Product_Formulary_JO__c/fields/BOT_SubChannel__c.field-meta.xml
<CustomField>
    <fullName>BOT_SubChannel__c</fullName>
    <description>It is used to pull subChannel value from the parent Plan Product record.</description>
    <formula>BOT_Plan_Product__r.BOT_SubChannel__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SubChannel</label>
    <type>Text</type>
</CustomField>